# ObjectTrackingRobot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  setup_pi.sh
models/: basic_cnn.py
ros2_ws/: Dockerfile  docker-compose.yaml  setup_ros.sh
ros2_ws/.devcontainer/: devcontainer.json  export_env.sh
ros2_ws/src/hand_robot/: package.xml  setup.cfg  setup.py
ros2_ws/src/hand_robot/hand_robot/launch/: hand_robot_launch.py
ros2_ws/src/hand_robot/hand_robot/msg/: Detection.msg
ros2_ws/src/hand_robot/hand_robot/nodes/: annotated_publisher.py  camera_node.py  fake_camera_node.py  hand_pose_node.py  (+4 more)
ros2_ws/src/robot/: package.xml  setup.py
ros2_ws/src/robot_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/robot_msgs/msg/: Detection.msg  Input.msg  TurretEvent.msg  TurretLog.msg  TurretState.msg
scripts/: dataParser.py  data_utils.py  eval.py  forward_to_backend.py  ros_to_backend.py  test.py  train.py  tunnel.py  visualise.py  webcam_inference.py  webcam_receive.py  webcam_stream.py
web_server/backend/: package-lock.json  package.json  server.js
web_server/frontend/: index.html  package-lock.json  package.json
web_server/frontend/public/: index.html
web_server/frontend/src/: App.css  App.js  global.css
web_server/frontend/src/components/: AutoControls.jsx  CameraPanel.jsx  EventConsole.jsx  ManualControls.jsx  ModeSelector.jsx  PromptControls.jsx  TrackControls.jsx
web_server/frontend/src/hooks/: useCameraStream.js  useEventLogs.js  useInputPublisher.js  useManualControl.js  useRosConnection.js
web_server/frontend_backup/: index.html
(+35 files in other folders)
