<package format="3">
  <name>robot_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for robot</description>
  <maintainer email="lkxben@gmail.com">Ben</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>